# openblocks

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  coreidea.md  implementations.md  prd.md  spec.md  todo.md  usefulwebsites.md
.github/workflows/: ci.yml  release.yml
data/: advanced_ui_components.json  agents_font_components.json  animated_components.json  blocks_so_components.json  creative_ui_components.json  css_buttons.json  css_checkboxes.json  css_radios.json  css_shadows.json  css_shapes.json  css_text_animations.json  extra_rich_components.json  generated_components.json  heroui_components.json  interactive_effects_components.json  layout_revolution_components.json  motion_svelte_components.json  mvp_ui_components.json  premium_scraped_components.json  react_bits_components.json  seed_components.json  shadcn_components.json  shadcn_space_components.json  tailblocks_components.json  threejs_components.json  uiverse_components.json
scripts/: fetch_tailblocks.py  fetch_uiverse.py  fetch_webgradients.py  gen_css_buttons.py  gen_css_checkboxes.py  gen_css_radios.py  gen_css_shadows.py  gen_css_shapes.py  gen_heroui.py  generate_more_components.py  generate_premium_scraped_components.py  install.sh
src/: config.rs  error.rs  main.rs  server.rs
src/db/: components.rs  connection.rs  gradients.rs  migrations.rs  mod.rs  palettes.rs  templates.rs
src/models/: component.rs  enums.rs  gradient.rs  mod.rs  palette.rs  template.rs
src/search/: engine.rs  mod.rs
