[package]
name = "openblocks"
version = "0.0.4"
edition = "2024"
description = "A Rust-native MCP server for web development — pre-built UI components, blocks, and templates for AI agents"
license = "MIT"

[dependencies]
# MCP Core
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"

# Search
simsearch = "0.2"

# Templating
minijinja = "2"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }

[workspace]
